# engram

./: .env.example  .gitignore  CLAUDE.md  JOURNAL.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
bench/: charts.py  run_bench.py  tasks.yaml
demo-site/: flights.py  serve.py
demo-site/app_v1/: main.py
demo-site/app_v2/: main.py
deploy/: alibaba_proof.py  ecs_setup.md
docs/: mcp_setup.md
landing/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
landing/src/: App.jsx  EngramField.jsx  index.css
src/engram/: llm.py  metrics.py
src/engram/agent/: browser.py  guardrails.py  replay.py  vision_loop.py  worker.py
src/engram/curator/: jobs.py  report.py
src/engram/memory/: consolidate.py  decay.py  embeddings.py  preferences.py  recall.py  schemas.py  store.py
src/engram/server/: api.py  mcp_server.py
src/engram/voice/: asr.py  tts.py
tests/: conftest.py  test_api.py  test_curator.py  test_decay.py  test_demo_site.py  test_guardrails.py  test_llm.py  test_store_recall.py  test_voice.py  test_worker_consolidate.py
ui/: app.js  index.html  style.css
