[project]
name = "engram"
version = "0.1.0"
description = "Muscle memory for AI agents: learned once, remembered everywhere, kept fresh automatically."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "qdrant-client>=1.9",
    "rapidfuzz>=3.9",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
